<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/fondo"
    tools:context="com.felepo.tic_tac_toe.MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.3"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            style="@style/titulo"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/unJugador"
            android:text="@string/un_jugador"
            style="@style/boton"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                android:text="@string/facil"
                style="@style/radio_boton"/>

            <RadioButton
                android:id="@+id/normal"
                android:text="@string/normal"
                style="@style/radio_boton"/>

            <RadioButton
                android:id="@+id/dificil"
                android:text="@string/dificil"
                style="@style/radio_boton"/>

        </RadioGroup>

        <Button
            android:id="@+id/dosJugadores"
            android:text="@string/dos_jugadores"
            style="@style/boton"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.4"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/a3"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b2"
            android:src="@drawable/equis"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/c1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/circulo"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"/>

    </GridLayout>

</LinearLayout>
